declarative/processor/src/test/resources/good/resource extends nothing.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Resource;

@Resource
interface X {
}
