declarative/processor/src/test/resources/bad/resource is not an interface.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Resource;

@Resource
class X {
}
